[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"
description = "A desktop application for dividing income."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.7.2"

[build-dependencies]
slint-build = "1.7.2"


[package.metadata.bundle]
name = "Income Divider"
identifier = "io.github.pandafter.incomeapp"