[package]
name = "incomedivider-desktop"
version = "0.1.0"
authors = ["Nicolas Leyva <nicolasleyvah@outlook.com>"]
edition = "2021"
build = "build.rs"
description = "A desktop application for dividing income"

[dependencies]
slint = "1.7.2"

[build-dependencies]
slint-build = "1.7.2"

[package.metadata.bundle]
name = "IncomeDivider"
identifier = "io.github.pandafter.incomeapp"
description = "A desktop application for dividing income"
resources = ["D:/rust_project_1/incomeapp/target/release/slint-rust-template.exe"]

